# pycode_kg

./: .gitignore  .mcp.json  .mcp.json.bak  .mcp.json.template  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  SNAPSHOT_PRUNE_SUMMARY.md  architecture.md  codekg_assessment_final.md  pycodekg_assessment_final.md  pyproject.toml  release-notes.md  settings.json.template
.claude/: claude_code_config.json  settings.json
.claude/commands/: pycodekg.md  release.md  setup-codekg-mcp.md  setup-pycodekg-mcp.md  sync-mcp-docs.md
.claude/skills/: kgrag-usage.skill  new-kg-module.skill
.claude/skills/codekg/: SKILL.md  clinerules.md
.claude/skills/codekg-thorough-analysis/: SKILL.md
.claude/skills/dockg/: SKILL.md
.claude/skills/kgrag/: SKILL.md
.claude/skills/kgrag-usage/: SKILL.md
.claude/skills/new-kg-module/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/pycodekg/: SKILL.md  clinerules.md
.claude/skills/pycodekg-thorough-analysis/: SKILL.md
.codekg/snapshots/: manifest.json
.dockg/snapshots/: manifest.json
.github/: SNAPSHOTS_CI.md
.github/workflows/: ci.yml  publish.yml
.pycodekg/snapshots/: manifest.json
analysis/: CodeKG_Assessment.md  PyCodeKG_Assessment.md  bug_pre_commit_snapshot_ordering_20260318.md  bug_relative_path_defaults_20260317.md  code_kg_analysis_20260310.md  code_kg_analysis_20260311.md  code_kg_analysis_20260312.md  code_kg_analysis_20260314.md  code_kg_analysis_20260317.md  code_kg_analysis_20260319.md  code_kg_analysis_20260320.md  code_kg_analysis_20260403.md  embedder_benchmark_20260311_000046.md  embedder_benchmark_20260311_005014.md  embedder_benchmark_20260421_121814.json  embedder_benchmark_20260421_121814.md  embedder_benchmark_20260421_122359.json  embedder_benchmark_20260421_122359.md  embedder_benchmark_20260428_035141.json  embedder_benchmark_20260428_035141.md  embedder_benchmark_20260428_035145.json  embedder_benchmark_20260428_035145.md  embedder_benchmark_20260428_035204.json  embedder_benchmark_20260428_035204.md  embedder_benchmark_20260428_035216.json  embedder_benchmark_20260428_035216.md  embedder_benchmark_summary.md  matplotlib_analysis_20260317.md  numpy_analysis_20260312.md  pycode_kg_analysis_20260407.md  pycode_kg_analysis_20260419.md  pycode_kg_analysis_20260420.md  pycode_kg_analysis_20260427.md  pycode_kg_analysis_20260428.md  rerank_mode_comparison_2026-03-09.md  snapshots_consistency_20260318.md
announcements/: GITHUB.md  HACKERNEWS.md  REDDIT.md
article/: code_kg_medium.md  pycode_kg.tex  pycode_kg_medium.md
assessments/: AssessmentProtocol_CodeKG.md  AssessmentProtocol_PyCodeKG.md  CodeKG_assessment_claude_opus_4_2026-03-11.md  CodeKG_assessment_claude_sonnet_4_6_2026-03-11.md  CodeKG_assessment_claude_sonnet_kat_coder_pro_4_6_2026-03-13.md  CodeKG_assessment_gpt-4.1_2026-03-11.md  CodeKG_assessment_gpt41_2026_03_13.md  CodeKG_assessment_gpt_5_2026-03-11.md  CodeKG_assessment_haiku_4-5_2026-03-11.md  CodeKG_assessment_raptor_mini_2026-03-11.md  PyCodeKG_assessment_claude_opus_4_7_2026-04-20.md  PyCodeKG_assessment_claude_sonnet_4_6_2026-04-20.md  PyCodeKG_assessment_haiku_4-5_2026-03-11.md  PyCodeKG_assessment_raptor_mini_2026-03-11.md
assets/: architecture_description.md
docs/: Analyze.md  Architecture-brief.md  Architecture-plain.md  Architecture_usage.md  CHEATSHEET.md  CODERANK.md  CodeKG_analysis_v0.9.0.md  INSTALLATION.md  KGMODULE.md  MCP.md  RANKING_INTEGRATION.md  SNAPSHOTS.md  VIZ3D.md  analysis_v0.11.0.md  analysis_v0.15.0.md  analysis_v0.15.1.md  analysis_v0.17.2.md  analysis_v0.18.0.md  claude_chat_global_mcp.json  code_kg.html  code_kg_workflow.md  deployment.md  index.html  integration_notes.md  pull_request_template.md  pycode_kg.html  pycode_kg_funnel.html  pycode_kg_workflow.md  search.js  structural_importance.md
memory/: feedback_commit_timing.md
scripts/: analyze_repo.sh  backup-agent-config.sh  benchmark_embedders.py  generate_wiki.py  install-skill.sh  rebuild-pycodekg.sh
src/code_kg/: __init__.py  __main__.py  app.py  architecture.py  build_codekg_lancedb.py  build_codekg_sqlite.py  codekg.py  codekg_query.py  codekg_snippet_packer.py  codekg_thorough_analysis.py  codekg_viz.py  codekg_viz3d.py  config.py  graph.py  index.py  kg.py  mcp_server.py  snapshots.py  store.py  utils.py  visitor.py  viz3d.py  viz3d_timeline.py
src/code_kg/analysis/: __init__.py  bridge.py  centrality.py  framework_detector.py  hybrid_rank.py
src/code_kg/cli/: __init__.py  cmd_analyze.py  cmd_architecture.py  cmd_bridges.py  cmd_build.py  cmd_build_full.py  cmd_centrality.py  cmd_explain.py  cmd_framework_nodes.py  cmd_hooks.py  cmd_mcp.py  cmd_model.py  cmd_query.py  cmd_snapshot.py  cmd_viz.py  main.py  options.py
src/code_kg/mcp/: bridge_tools.py  framework_tools.py
src/code_kg/module/: __init__.py  base.py  extractor.py  types.py
src/code_kg/ranking/: __init__.py  cli_rank.py  coderank.py
src/code_kg/sql/: 004_add_centrality_table.sql
src/pycode_kg/: __init__.py  __main__.py  app.py  architecture.py  build_pycodekg_lancedb.py  build_pycodekg_sqlite.py  config.py  graph.py  index.py  kg.py  layout3d.py  mcp_server.py  pycodekg.py  pycodekg_query.py  pycodekg_snippet_packer.py  pycodekg_thorough_analysis.py  pycodekg_viz.py  pycodekg_viz3d.py  snapshots.py  store.py  utils.py  visitor.py  viz3d.py  viz3d_timeline.py
src/pycode_kg/analysis/: __init__.py  bridge.py  centrality.py  framework_detector.py  hybrid_rank.py
src/pycode_kg/cli/: __init__.py  cmd_analyze.py  cmd_architecture.py  cmd_bridges.py  cmd_build.py  cmd_build_full.py  cmd_centrality.py  cmd_explain.py  cmd_framework_nodes.py  cmd_hooks.py  cmd_init.py  cmd_mcp.py  cmd_model.py  cmd_query.py  cmd_snapshot.py  cmd_viz.py  main.py  options.py
src/pycode_kg/mcp/: bridge_tools.py  (+1 more)
tests/: conftest.py  test_architecture.py  test_centrality.py  test_coderank.py  test_exclusions.py  test_graph.py  test_index.py  test_integration.py  test_kg.py  test_primitives.py  test_snapshots.py  test_store.py  test_visitor.py  test_viz3d_timeline.py
(+23 files in other folders)
