# PyCodeKG - Knowledge Graph Builder for Python Codebases
#
# PyCodeKG is a tool that builds searchable knowledge graphs from Python repositories.
# It analyzes Python code to extract semantic relationships between modules, classes,
# functions, and methods, creating a comprehensive graph representation that can be
# queried using natural language.
#
# Key Features:
# - AST-based code analysis with semantic understanding
# - Support for multiple storage backends (SQLite, LanceDB)
# - Natural language querying capabilities
# - Code snippet extraction and visualization
# - MCP (Model Context Protocol) server integration
# - Streamlit-based web interface for exploration
#
# The tool is designed for developers who want to understand large codebases,
# perform code analysis, or build AI-powered development tools.
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-03-12 17:27:42
#



[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycode-kg"
version = "0.11.0"
description = "A tool to build a searchable knowledge graph from Python repositories"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/pycode_kg"
repository = "https://github.com/Flux-Frontiers/pycode_kg"
keywords = ["knowledge-graph", "code-analysis", "ast", "lancedb", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "pycode_kg", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"

# from personal_agent
transformers = "^4.57.6"
sentence-transformers = "^5.2.0"
safetensors = "^0.5.0"

# sentence-transformers = "==4.1.0"
# transformers = "<5.0.0"
torch = ">=2.5.1"
streamlit = { version = ">=1.35.0", optional = true }
pyvis = { version = ">=0.3.2", optional = true }
pandas = ">=2.0.0"
rich = "^14.3.3"
click = ">=8.1.0"
mcp = ">=1.0.0"
plotly = { version = ">=5.14.0", optional = true }
pyvista = { version = ">=0.44.0", extras = ["jupyter"], optional = true }
pyvistaqt = { version = ">=0.11.0", optional = true }
PyQt5 = { version = ">=5.15.0", optional = true }
param = { version = ">=2.0.0", optional = true }
markdown = { version = ">=3.6", optional = true }
trame-vtk = { version = ">=2.0.0", optional = true }

kg-snapshot = { version = ">=0.3.0", source = "testpypi" }

[tool.poetry.extras]
viz = ["streamlit", "pyvis", "plotly"]
viz3d = ["pyvista", "pyvistaqt", "PyQt5", "param", "markdown", "trame-vtk"]

[tool.poetry.group.viz3d]
optional = true

[tool.poetry.group.viz3d.dependencies]
pyvista = { version = ">=0.44.0", extras = ["jupyter"] }
pyvistaqt = ">=0.11.0"
PyQt5 = ">=5.15.0"
param = ">=2.0.0"
markdown = ">=3.6"
trame-vtk = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
doc-kg = { git = "https://github.com/Flux-Frontiers/doc_kg.git" }
ftree-kg = { git = "https://github.com/Flux-Frontiers/FTree_kg.git" }
agent-kg = { git = "https://github.com/Flux-Frontiers/agent_kg.git" }
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"
pdoc = ">=14.0.0"



[tool.poetry.scripts]
pycodekg              = "pycode_kg.cli.main:cli"
pycodekg-mcp          = "pycode_kg.mcp_server:main"
pycodekg-build-sqlite = "pycode_kg.cli.cmd_build:build_sqlite"
pycodekg-build-lancedb = "pycode_kg.cli.cmd_build:build_lancedb"
pycodekg-build        = "pycode_kg.cli.cmd_build_full:build"
pycodekg-update       = "pycode_kg.cli.cmd_build_full:update"
pycodekg-query        = "pycode_kg.cli.cmd_query:query"
pycodekg-pack         = "pycode_kg.cli.cmd_query:pack"
pycodekg-viz              = "pycode_kg.cli.cmd_viz:viz"
pycodekg-viz3d            = "pycode_kg.cli.cmd_viz:viz3d"
pycodekg-viz-timeline     = "pycode_kg.cli.cmd_viz:viz_timeline"
pycodekg-analyze          = "pycode_kg.cli.cmd_analyze:analyze"
pycodekg-architecture     = "pycode_kg.cli.cmd_architecture:architecture"
pycodekg-download-model   = "pycode_kg.cli.cmd_model:download_model"
pycodekg-install-hooks    = "pycode_kg.cli.cmd_hooks:install_hooks"
pycodekg-centrality       = "pycode_kg.cli.cmd_centrality:cmd_centrality"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "cyclic-import",           # R0401
    "broad-exception-caught",  # W0718
    "cell-var-from-loop",      # W0640
    "undefined-variable",      # E0602
    "import-outside-toplevel", # C0415
]

[tool.pycodekg]
# Directories to include in the knowledge graph build and analysis.
# When unset, all directories are indexed.
include = ["src"]
# Directories to exclude at every depth during the file walk.
# Combined with the built-in SKIP_DIRS (.git, .venv, __pycache__, etc.).
# exclude = ["tests", "benchmarks"]

[tool.dockg]
# Exclude directories from the knowledge graph by default.
exclude = [".dockg", ".pycodekg", "src", ".git", ".venv", "venv", "__pycache__",
".mypy_cache", ".pytest_cache", "bundles", "dist"]

[tool.poe.tasks.docs]
help = "Generate project documentation and user guide PDFs"
sequence = [
  { shell = "cd src && pdoc --o ../docs --logo ./logo.png pycode_kg" },
]

[tool.poe.tasks.wiki]
help = "Generate and publish GitHub wiki from docs/"
cmd = "python scripts/generate_wiki.py"

[tool.poe.tasks.wiki-preview]
help = "Preview wiki generation without publishing"
cmd = "python scripts/generate_wiki.py --dry-run"
